frontend/src/app.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap")
layer(base);

@import "tailwindcss";

@config '../tailwind.config.ts';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@layer base {
  :root {
    --background: 0deg 0% 100%;
    --foreground: 195deg 10% 5%;
    --card: 0deg 0% 100%;
    --card-foreground: 195deg 10% 5%;
    --popover: 0deg 0% 100%;
    --popover-foreground: 195deg 10% 5%;
    --primary: 195deg 75% 25%;
    --primary-foreground: 0deg 0% 100%;
    --secondary: 250deg 35% 60%;
    --secondary-foreground: 0deg 0% 100%;
    --muted: 195deg 5% 98%;
    --muted-foreground: 195deg 5% 45%;
    --accent: 195deg 5% 95%;
    --accent-foreground: 195deg 5% 10%;
    --destructive: 0deg 70% 50%;
    --destructive-foreground: 0deg 0% 98%;
    --border: 195deg 5% 90%;
    --input: 195deg 5% 90%;
    --ring: 195deg 75% 25%;
    --radius: 0.5rem;
    --sidebar-background: 0deg 0% 98%;
    --sidebar-foreground: 240deg 5% 25%;
    --sidebar-primary: 240deg 5% 10%;
    --sidebar-primary-foreground: 0deg 0% 98%;
    --sidebar-accent: 240deg 5% 95%;
    --sidebar-accent-foreground: 240deg 5% 10%;
    --sidebar-border: 220deg 15% 90%;
    --sidebar-ring: 220deg 90% 60%;

    --md-sys-color-primary: 17 102 130;
    --md-sys-color-surface-tint: 17 102 130;
    --md-sys-color-on-primary: 255 255 255;
    --md-sys-color-primary-container: 189 233 255;
    --md-sys-color-on-primary-container: 0 31 42;
    --md-sys-color-secondary: 77 97 108;
    --md-sys-color-on-secondary: 255 255 255;
    --md-sys-color-secondary-container: 208 230 242;
    --md-sys-color-on-secondary-container: 8 30 39;
    --md-sys-color-tertiary: 93 91 125;
    --md-sys-color-on-tertiary: 255 255 255;
    --md-sys-color-tertiary-container: 227 223 255;
    --md-sys-color-on-tertiary-container: 25 24 54;
    --md-sys-color-error: 186 26 26;
    --md-sys-color-on-error: 255 255 255;
    --md-sys-color-error-container: 255 218 214;
    --md-sys-color-on-error-container: 65 0 2;
    --md-sys-color-background: 246 250 253;
    --md-sys-color-on-background: 23 28 31;
    --md-sys-color-surface: 246 250 253;
    --md-sys-color-on-surface: 23 28 31;
    --md-sys-color-surface-variant: 220 228 233;
    --md-sys-color-on-surface-variant: 64 72 76;
    --md-sys-color-outline: 112 120 125;
    --md-sys-color-outline-variant: 192 200 205;
    --md-sys-color-shadow: 0 0 0;
    --md-sys-color-scrim: 0 0 0;
    --md-sys-color-inverse-surface: 44 49 52;
    --md-sys-color-inverse-on-surface: 237 241 245;
    --md-sys-color-inverse-primary: 139 208 239;
    --md-sys-color-primary-fixed: 189 233 255;
    --md-sys-color-on-primary-fixed: 0 31 42;
    --md-sys-color-primary-fixed-dim: 139 208 239;
    --md-sys-color-on-primary-fixed-variant: 0 77 100;
    --md-sys-color-secondary-fixed: 208 230 242;
    --md-sys-color-on-secondary-fixed: 8 30 39;
    --md-sys-color-secondary-fixed-dim: 180 202 214;
    --md-sys-color-on-secondary-fixed-variant: 53 74 83;
    --md-sys-color-tertiary-fixed: 227 223 255;
    --md-sys-color-on-tertiary-fixed: 25 24 54;
    --md-sys-color-tertiary-fixed-dim: 198 194 234;
    --md-sys-color-on-tertiary-fixed-variant: 69 67 100;
    --md-sys-color-surface-dim: 214 219 222;
    --md-sys-color-surface-bright: 246 250 253;
    --md-sys-color-surface-container-lowest: 255 255 255;
    --md-sys-color-surface-container-low: 240 244 248;
    --md-sys-color-surface-container: 234 238 242;
    --md-sys-color-surface-container-high: 228 233 236;
    --md-sys-color-surface-container-highest: 223 227 231;
  }

  .dark {
    --background: 220deg 15% 10%;
    --foreground: 0deg 0% 95%;
    --card: 220deg 15% 15%;
    --card-foreground: 0deg 0% 95%;
    --popover: 0deg 0% 9%;
    --popover-foreground: 0deg 0% 95%;
    --primary: 195deg 70% 65%;
    --primary-foreground: 195deg 80% 10%;
    --secondary: 250deg 30% 75%;
    --secondary-foreground: 250deg 80% 10%;
    --muted: 220deg 15% 15%;
    --muted-foreground: 195deg 5% 65%;
    --accent: 220deg 15% 20%;
    --accent-foreground: 0deg 0% 98%;
    --destructive: 0deg 60% 50%;
    --destructive-foreground: 0deg 85% 98%;
    --border: 220deg 10% 25%;
    --input: 220deg 5% 15%;
    --ring: 195deg 70% 30%;
    --sidebar-background: 240deg 5% 10%;
    --sidebar-foreground: 240deg 5% 95%;
    --sidebar-primary: 225deg 75% 50%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240deg 5% 15%;
    --sidebar-accent-foreground: 240deg 5% 95%;
    --sidebar-border: 240deg 5% 15%;
    --sidebar-ring: 220deg 90% 60%;

    --md-sys-color-primary: 139 208 239;
    --md-sys-color-surface-tint: 139 208 239;
    --md-sys-color-on-primary: 0 53 70;
    --md-sys-color-primary-container: 0 77 100;
    --md-sys-color-on-primary-container: 189 233 255;
    --md-sys-color-secondary: 180 202 214;
    --md-sys-color-on-secondary: 31 51 60;
    --md-sys-color-secondary-container: 53 74 83;
    --md-sys-color-on-secondary-container: 208 230 242;
    --md-sys-color-tertiary: 198 194 234;
    --md-sys-color-on-tertiary: 46 45 77;
    --md-sys-color-tertiary-container: 69 67 100;
    --md-sys-color-on-tertiary-container: 227 223 255;
    --md-sys-color-error: 255 180 171;
    --md-sys-color-on-error: 105 0 5;
    --md-sys-color-error-container: 147 0 10;
    --md-sys-color-on-error-container: 255 218 214;
    --md-sys-color-background: 15 20 23;
    --md-sys-color-on-background: 223 227 231;
    --md-sys-color-surface: 15 20 23;
    --md-sys-color-on-surface: 223 227 231;
    --md-sys-color-surface-variant: 64 72 76;
    --md-sys-color-on-surface-variant: 192 200 205;
    --md-sys-color-outline: 138 146 151;
    --md-sys-color-outline-variant: 64 72 76;
    --md-sys-color-shadow: 0 0 0;
    --md-sys-color-scrim: 0 0 0;
    --md-sys-color-inverse-surface: 223 227 231;
    --md-sys-color-inverse-on-surface: 44 49 52;
    --md-sys-color-inverse-primary: 17 102 130;
    --md-sys-color-primary-fixed: 189 233 255;
    --md-sys-color-on-primary-fixed: 0 31 42;
    --md-sys-color-primary-fixed-dim: 139 208 239;
    --md-sys-color-on-primary-fixed-variant: 0 77 100;
    --md-sys-color-secondary-fixed: 208 230 242;
    --md-sys-color-on-secondary-fixed: 8 30 39;
    --md-sys-color-secondary-fixed-dim: 180 202 214;
    --md-sys-color-on-secondary-fixed-variant: 53 74 83;
    --md-sys-color-tertiary-fixed: 227 223 255;
    --md-sys-color-on-tertiary-fixed: 25 24 54;
    --md-sys-color-tertiary-fixed-dim: 198 194 234;
    --md-sys-color-on-tertiary-fixed-variant: 69 67 100;
    --md-sys-color-surface-dim: 15 20 23;
    --md-sys-color-surface-bright: 53 58 61;
    --md-sys-color-surface-container-lowest: 10 15 17;
    --md-sys-color-surface-container-low: 23 28 31;
    --md-sys-color-surface-container: 27 32 35;
    --md-sys-color-surface-container-high: 38 43 45;
    --md-sys-color-surface-container-highest: 48 53 56;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/*
  Default button cursors: https://tailwindcss.com/docs/upgrade-guide#buttons-use-the-default-cursor
*/
@layer base {
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

